at_krl/grammar/at_krlParser.py
# Generated from /app/at_krl.g4 by ANTLR 4.13.0
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class at_krlParser(Parser):
    grammarFileName = "at_krl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'||'",
        "'&&'",
        "'&'",
        "'and'",
        "'|'",
        "'or'",
        "'!'",
        "'~'",
        "'not'",
        "'xor'",
        "'=='",
        "'='",
        "'eq'",
        "'>='",
        "'>'",
        "'gt'",
        "'ge'",
        "'<>'",
        "'<='",
        "'<'",
        "'lt'",
        "'le'",
        "'ne'",
        "'+'",
        "'add'",
        "'-'",
        "'sub'",
        "'**'",
        "'mul'",
        "'/'",
        "'div'",
        "'%'",
        "'mod'",
        "'^'",
        "'*'",
        "'pow'",
        "':='",
        "'<-'",
        "'->'",
        "';'",
        "','",
        "<INVALID>",
        "'\\r\\n'",
        "'\\u0423\\u0412\\u0415\\u0420\\u0415\\u041D\\u041D\\u041E\\u0421\\u0422\\u042C'",
        "'\\u0422\\u041E\\u0427\\u041D\\u041E\\u0421\\u0422\\u042C'",
        "'\\u041F\\u0420\\u0410\\u0412\\u0418\\u041B\\u041E'",
        "'\\u0415\\u0421\\u041B\\u0418'",
        "'\\u0422\\u041E'",
        "'\\u0418\\u041D\\u0410\\u0427\\u0415'",
        "'\\u0422\\u0418\\u041F'",
        "'\\u041E\\u0411\\u042A\\u0415\\u041A\\u0422'",
        "'\\u0413\\u0420\\u0423\\u041F\\u041F\\u0410'",
        "'\\u0410\\u0422\\u0420\\u0418\\u0411\\u0423\\u0422'",
        "'\\u0410\\u0422\\u0420\\u0418\\u0411\\u0423\\u0422\\u042B'",
        "'\\u041A\\u041E\\u041C\\u041C\\u0415\\u041D\\u0422\\u0410\\u0420\\u0418\\u0419'",
        "'\\u0417\\u041D\\u0410\\u0427\\u0415\\u041D\\u0418\\u0415'",
        "'\\u0418\\u041D\\u0422\\u0415\\u0420\\u0412\\u0410\\u041B'",
        "'\\u0418\\u043D\\u0442\\u0435\\u0440\\u0432\\u0430\\u043B'",
        "'\\u0421\\u041E\\u0411\\u042B\\u0422\\u0418\\u0415'",
        "'\\u0421\\u043E\\u0431\\u044B\\u0442\\u0438\\u0435'",
        "'\\u0410\\u0422\\u0420\\u0418\\u0411\\u0423\\u0422 \\u0423\\u0441\\u043B\\u0412\\u043E\\u0437\\u043D'",
        "'\\u0410\\u0422\\u0420\\u0418\\u0411\\u0423\\u0422 \\u0423\\u0441\\u043B\\u041D\\u0430\\u0447'",
        "'\\u0410\\u0422\\u0420\\u0418\\u0411\\u0423\\u0422 \\u0423\\u0441\\u043B\\u041E\\u043A\\u043E\\u043D\\u0447'",
        "'\\u0422\\u0418\\u041F \\u041B\\u043E\\u0433\\u0412\\u044B\\u0440'",
        "'\\u0421\\u0418\\u041C\\u0412\\u041E\\u041B'",
        "'\\u0427\\u0418\\u0421\\u041B\\u041E'",
        "'\\u041D\\u0415\\u0427\\u0415\\u0422\\u041A\\u0418\\u0419'",
        "'\\u041E\\u0422'",
        "'\\u0414\\u041E'",
        "'.'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'{'",
        "'}'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "ALLEN_SIGN",
        "NEW_LINE",
        "BELIEF",
        "ACCURACY",
        "RULE",
        "IF",
        "THEN",
        "ELSE",
        "TYPE",
        "OBJECT",
        "GROUP",
        "ATTR",
        "ATTRS",
        "COMMENT",
        "VALUE",
        "INTERVAL",
        "CASED_INTERVAL",
        "EVENT",
        "CASED_EVENT",
        "OCCURANCE_CONDITION",
        "OPEN",
        "CLOSE",
        "SIMPLE_EXP_TYPE",
        "SYM",
        "NUM",
        "FUZ",
        "FROM",
        "TO",
        "DOT",
        "L_BR",
        "R_BR",
        "LS_BR",
        "RS_BR",
        "LF_BR",
        "RF_BR",
        "LETTER",
        "NUMERIC",
        "ALPHANUMERIC",
        "ALPHANUMERIC_U",
        "FRAC",
        "WS",
        "COMM_CHAR",
        "STRING",
    ]

    RULE_log_sign = 0
    RULE_comp_sign = 1
    RULE_lowp_math_sign = 2
    RULE_highp_math_sign = 3
    RULE_knowledge_base = 4
    RULE_kb_types = 5
    RULE_kb_classes = 6
    RULE_kb_rules = 7
    RULE_commentary = 8
    RULE_instructions = 9
    RULE_assign_instruction = 10
    RULE_kb_rule = 11
    RULE_kb_rule_instructions = 12
    RULE_kb_rule_condition = 13
    RULE_kb_rule_else_instructions = 14
    RULE_belief = 15
    RULE_accuracy = 16
    RULE_non_factor = 17
    RULE_kb_operation = 18
    RULE_kb_allen_operation = 19
    RULE_simple_operation = 20
    RULE_simple_evaluatable = 21
    RULE_simple_value = 22
    RULE_kb_value = 23
    RULE_ref_path = 24
    RULE_simple_ref = 25
    RULE_kb_reference = 26
    RULE_evaluatable = 27
    RULE_kb_type = 28
    RULE_kb_type_body = 29
    RULE_symbolic_type_body = 30
    RULE_numeric_type_body = 31
    RULE_fuzzy_type_body = 32
    RULE_membersip_function = 33
    RULE_mf_def = 34
    RULE_mf_point = 35
    RULE_mf_body = 36
    RULE_kb_class = 37
    RULE_kb_class_body = 38
    RULE_event_body = 39
    RULE_interval_body = 40
    RULE_object_body = 41
    RULE_attributes = 42
    RULE_attribute = 43

    ruleNames = [
        "log_sign",
        "comp_sign",
        "lowp_math_sign",
        "highp_math_sign",
        "knowledge_base",
        "kb_types",
        "kb_classes",
        "kb_rules",
        "commentary",
        "instructions",
        "assign_instruction",
        "kb_rule",
        "kb_rule_instructions",
        "kb_rule_condition",
        "kb_rule_else_instructions",
        "belief",
        "accuracy",
        "non_factor",
        "kb_operation",
        "kb_allen_operation",
        "simple_operation",
        "simple_evaluatable",
        "simple_value",
        "kb_value",
        "ref_path",
        "simple_ref",
        "kb_reference",
        "evaluatable",
        "kb_type",
        "kb_type_body",
        "symbolic_type_body",
        "numeric_type_body",
        "fuzzy_type_body",
        "membersip_function",
        "mf_def",
        "mf_point",
        "mf_body",
        "kb_class",
        "kb_class_body",
        "event_body",
        "interval_body",
        "object_body",
        "attributes",
        "attribute",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    ALLEN_SIGN = 42
    NEW_LINE = 43
    BELIEF = 44
    ACCURACY = 45
    RULE = 46
    IF = 47
    THEN = 48
    ELSE = 49
    TYPE = 50
    OBJECT = 51
    GROUP = 52
    ATTR = 53
    ATTRS = 54
    COMMENT = 55
    VALUE = 56
    INTERVAL = 57
    CASED_INTERVAL = 58
    EVENT = 59
    CASED_EVENT = 60
    OCCURANCE_CONDITION = 61
    OPEN = 62
    CLOSE = 63
    SIMPLE_EXP_TYPE = 64
    SYM = 65
    NUM = 66
    FUZ = 67
    FROM = 68
    TO = 69
    DOT = 70
    L_BR = 71
    R_BR = 72
    LS_BR = 73
    RS_BR = 74
    LF_BR = 75
    RF_BR = 76
    LETTER = 77
    NUMERIC = 78
    ALPHANUMERIC = 79
    ALPHANUMERIC_U = 80
    FRAC = 81
    WS = 82
    COMM_CHAR = 83
    STRING = 84

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class Log_signContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return at_krlParser.RULE_log_sign

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLog_sign"):
                listener.enterLog_sign(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLog_sign"):
                listener.exitLog_sign(self)

    def log_sign(self):
        localctx = at_krlParser.Log_signContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_log_sign)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 2046) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comp_signContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return at_krlParser.RULE_comp_sign

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterComp_sign"):
                listener.enterComp_sign(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitComp_sign"):
                listener.exitComp_sign(self)

    def comp_sign(self):
        localctx = at_krlParser.Comp_signContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comp_sign)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 16775168) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lowp_math_signContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return at_krlParser.RULE_lowp_math_sign

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLowp_math_sign"):
                listener.enterLowp_math_sign(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLowp_math_sign"):
                listener.exitLowp_math_sign(self)

    def lowp_math_sign(self):
        localctx = at_krlParser.Lowp_math_signContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lowp_math_sign)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 251658240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Highp_math_signContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return at_krlParser.RULE_highp_math_sign

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHighp_math_sign"):
                listener.enterHighp_math_sign(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHighp_math_sign"):
                listener.exitHighp_math_sign(self)

    def highp_math_sign(self):
        localctx = at_krlParser.Highp_math_signContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_highp_math_sign)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 137170518016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Knowledge_baseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kb_types(self):
            return self.getTypedRuleContext(at_krlParser.Kb_typesContext, 0)

        def kb_classes(self):
            return self.getTypedRuleContext(at_krlParser.Kb_classesContext, 0)

        def kb_rules(self):
            return self.getTypedRuleContext(at_krlParser.Kb_rulesContext, 0)

        def getRuleIndex(self):
            return at_krlParser.RULE_knowledge_base

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKnowledge_base"):
                listener.enterKnowledge_base(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKnowledge_base"):
                listener.exitKnowledge_base(self)

    def knowledge_base(self):
        localctx = at_krlParser.Knowledge_baseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_knowledge_base)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.kb_types()
            self.state = 97
            self.kb_classes()
            self.state = 98
            self.kb_rules()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Kb_typesContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kb_type(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(at_krlParser.Kb_typeContext)
            else:
                return self.getTypedRuleContext(at_krlParser.Kb_typeContext, i)

        def getRuleIndex(self):
            return at_krlParser.RULE_kb_types

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKb_types"):
                listener.enterKb_types(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKb_types"):
                listener.exitKb_types(self)

    def kb_types(self):
        localctx = at_krlParser.Kb_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_kb_types)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 100
                    self.kb_type()
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Kb_classesContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kb_class(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(at_krlParser.Kb_classContext)
            else:
                return self.getTypedRuleContext(at_krlParser.Kb_classContext, i)

        def getRuleIndex(self):
            return at_krlParser.RULE_kb_classes

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKb_classes"):
                listener.enterKb_classes(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKb_classes"):
                listener.exitKb_classes(self)

    def kb_classes(self):
        localctx = at_krlParser.Kb_classesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_kb_classes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 106
                    self.kb_class()
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Kb_rulesContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kb_rule(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(at_krlParser.Kb_ruleContext)
            else:
                return self.getTypedRuleContext(at_krlParser.Kb_ruleContext, i)

        def getRuleIndex(self):
            return at_krlParser.RULE_kb_rules

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKb_rules"):
                listener.enterKb_rules(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKb_rules"):
                listener.exitKb_rules(self)

    def kb_rules(self):
        localctx = at_krlParser.Kb_rulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_kb_rules)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 112
                    self.kb_rule()
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentaryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(at_krlParser.COMMENT, 0)

        def getRuleIndex(self):
            return at_krlParser.RULE_commentary

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCommentary"):
                listener.enterCommentary(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCommentary"):
                listener.exitCommentary(self)

    def commentary(self):
        localctx = at_krlParser.CommentaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_commentary)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(at_krlParser.COMMENT)
            self.state = 120
            self._errHandler.sync(self)
            _alt = 1 + 1
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 119
                    self.matchWildcard()

                else:
                    raise NoViableAltException(self)
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_instruction(self):
            return self.getTypedRuleContext(at_krlParser.Assign_instructionContext, 0)

        def getRuleIndex(self):
            return at_krlParser.RULE_instructions

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInstructions"):
                listener.enterInstructions(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInstructions"):
                listener.exitInstructions(self)

    def instructions(self):
        localctx = at_krlParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_instructions)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.assign_instruction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assign_instructionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ref_path(self):
            return self.getTypedRuleContext(at_krlParser.Ref_pathContext, 0)

        def evaluatable(self):
            return self.getTypedRuleContext(at_krlParser.EvaluatableContext, 0)

        def non_factor(self):
            return self.getTypedRuleContext(at_krlParser.Non_factorContext, 0)

        def getRuleIndex(self):
            return at_krlParser.RULE_assign_instruction

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssign_instruction"):
                listener.enterAssign_instruction(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssign_instruction"):
                listener.exitAssign_instruction(self)

    def assign_instruction(self):
        localctx = at_krlParser.Assign_instructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign_instruction)
        self._la = 0  # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.ref_path()
                self.state = 127
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 412316864512) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self.evaluatable()
                self.state = 131
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [44, 45]:
                    self.state = 129
                    self.non_factor()
                elif token in [-1, 7, 8, 9, 26, 46, 49, 55, 71, 78, 79, 80, 81, 84]:
                    pass
                else:
                    raise NoViableAltException(self)

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.evaluatable()
                self.state = 134
                self.match(at_krlParser.T__38)
                self.state = 135
                self.ref_path()
                self.state = 138
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [44, 45]:
                    self.state = 136
                    self.non_factor()
                elif token in [-1, 7, 8, 9, 26, 46, 49, 55, 71, 78, 79, 80, 81, 84]:
                    pass
                else:
                    raise NoViableAltException(self)
